# gene

./: .gitignore  README.md  pyproject.toml
src/gene/: __init__.py  __main__.py  agent.py  api.py  config.py  models.py  openai_client.py
src/gene/tools/: __init__.py  base.py  echo.py  reverse.py
tests/: example_agents_sdk_testing.py  example_usage.py  test_agent.py  test_agents_sdk_error_handling.py  test_agents_sdk_tool_integration.py  test_api_agents_sdk_errors.py  test_api_agents_sdk_integration.py  test_comprehensive_e2e_integration.py  test_comprehensive_e2e_integration_summary.md  test_config.py  test_dependency_injection_agents_sdk.py  test_health.py  test_integration_dependency_injection.py  test_integration_e2e.py  test_messages.py  test_models.py  test_openai_client.py  test_test_utils.py  test_tool_agent_e2e.py  test_tools.py  test_utils.py
