[project]
name = "gene"
version = "0.1.0"
description = ""
authors = [{name = "OpenAI", email = "ops@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openai-agents",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "--cov=gene --cov-report=term-missing"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
