[project]
name = "gene"
version = "0.1.0"
description = ""
authors = [{name = "OpenAI", email = "ops@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openai-agents",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
addopts = "--cov=gene --cov-report=term-missing"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1", 
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]
